# PythonWorkshop

./: CODE_OF_CONDUCT.md  Chapter1_2_Creating_Variables_and_Assigning_Values.ipynb  Chapter1_3_Keywords_and_Variable_naming.ipynb  Chapter1_4_Creating_Variables_and_Assigning_Values.ipynb  Chapter1_4_Datatypes.ipynb  Chapter1_Getting_Started_With_Python_Language.ipynb  Dockerfile  LICENSE  README.md  compose.yml  index.md  pyproject.toml
.github/workflows/: clean.yml  colab_badge.yml  docker-publish.yml  google_colab.yml  greetings.yml  treebeard.yml
Chapter_1/: 1_Getting_Started_With_Python_Language.ipynb  3_Keywords_and_Variable_naming.ipynb  4_Datatypes.ipynb
Chapters_1-5/: pythonworkshop.md
Chapters_1-5/Chapter_1/: 10_String_representations_of_objects.ipynb  10_String_representations_of_objects.md  11_Insalling_Packages.ipynb  12_Help_Utility.ipynb  1_Getting_Started_With_Python_Language.ipynb  1_Getting_Started_With_Python_Language.md  2_Creating_Variables_and_Assigning_Values.ipynb  2_Creating_Variables_and_Assigning_Values.md  3_Keywords_and_Variable_naming.ipynb  3_Keywords_and_Variable_naming.md  4_Datatypes.ipynb  4_Datatypes.md  5_Collection_Types.ipynb  5_Collection_Types.md  6_IDEs_for_Python.ipynb  7_User_Input.ipynb  7_User_Input.md  8_Builtins.ipynb  9_Modules.ipynb  9_Modules.md  merge.md
Chapters_1-5/Chapter_2/: 1_Indendation.ipynb  Indendation.ipynb  Untitled.ipynb  merge.md
Chapters_1-5/Chapter_3/: 1_Comments_and_docstrings.ipynb  merge.md
Chapters_1-5/Chapter_4/: 1_Functions.ipynb  merge.md  (+11 more)
docs/: _config.yml  index.html  index.md
(+29 files in other folders)
