[tool.poetry]
name = "Python Workshop"
version = "0.1.0"
description = "Let's discover Python having fun."
authors = ["NaveenKumarReddy8 <mr.naveen8@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.4.1"

[tool.poetry.dev-dependencies]
black-nb = "^0.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
